fixed auto scrolling and invisible box shadow

--- a/main.css
+++ b/main.css
@@ -47,9 +47,9 @@ nav{
     width:180px;
     height:230px;
     border-radius: 5px;
-    box-shadow: 1px -1px 22px 5px rgba(0,0,0,0.1);
--webkit-box-shadow: 1px -1px 22px 5px rgba(0,0,0,.1);
--moz-box-shadow: 1px -1px 22px 5px rgba(0,0,0,0.1);
+    box-shadow: 1px -1px 22px 5px rgba(0,0,0,0.2);
+-webkit-box-shadow: 1px -1px 22px 5px rgba(0,0,0,.2);
+-moz-box-shadow: 1px -1px 22px 5px rgba(0,0,0,0.2);
 background-color: white;
 }
 .cat:hover{
@@ -299,10 +299,7 @@ header{
 cursor:pointer;
 }
 
-.leaderboard-container{
-    margin:10% 5% 5% 15%;
-    display:none;
-}
+
 .leaderboard-entry{
     display:flex;
     align-items: center;
@@ -313,8 +310,8 @@ cursor:pointer;
 }
 .news-container{
     margin-top: 5vh;
-   margin-left:5%;
-   display: none;
+
+   /* display: none; */
  
 }
 .news-container header{
@@ -366,15 +363,17 @@ cursor:pointer;
 }
 
 @media (min-width: 992px) {
+    .leaderboard-container{
+        margin:10% 5% 5% 15%;
+        
+    }
     #title{
         display:block
     }
     .l{
         display:block
     }
-    .leaderboard-container{
-        display:block;
-    }
+   
     .quickstart{
     margin:10% 5% 5% 10%;
     height: 50vh;
@@ -382,6 +381,7 @@ cursor:pointer;
     }
     .news-container{
         display: block;
+        margin-left:5%;
     }
     nav{
         height:10vh;
